@@ -7,3 +7,5 @@ Sync.xs
 t/01_fsync.t
 t/02_error.t
 t/03_sync.t
+t/04_fdatasync.t
+META.yml                                 Module meta-data (added by MakeMaker)
