@@ -1,5 +1,8 @@
 Revision history for Perl extension File::Sync.
 
+0.?  ?
+	- Support for fdatasync()
+
 0.09  Sun, 28 Nov 1999 15:43:38 +1300
 	- Fixed my code so that bare glob refs _do_ work with Perl 5.005.
 
